# advent_of_code_2024

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs
src/days/: day_1.rs  day_10.rs  day_10_1.rs  day_10_2.rs  day_11.rs  day_11_1.rs  day_11_2.rs  day_12.rs  day_12_1.rs  day_12_2.rs  day_13.rs  day_13_1.rs  day_13_2.rs  day_14.rs  day_14_1.rs  day_14_2.rs  day_15.rs  day_15_1.rs  day_15_2.rs  day_16.rs  day_16_1.rs  day_16_2.rs  day_17.rs  day_17_1.rs  day_17_2.rs  day_18.rs  day_18_1.rs  day_18_2.rs  day_19.rs  day_19_1.rs  day_19_2.rs  day_1_1.rs  day_1_2.rs  day_2.rs  day_20.rs  day_20_1.rs  day_20_2.rs  day_21.rs  day_21_1.rs  day_21_2.rs  (+37 more)
