[package]
name = "advent_of_code_2024"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
microbench = "0.5.0"
paste = "1.0"
regex = "1.11.1"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["blocking", "rustls-tls", "cookies", "charset", "http2"]
